@@ -13,6 +13,8 @@ Changes
    * Close a test gap in (D)TLS between the client side and the server side:
      test the handling of large packets and small packets on the client side
      in the same way as on the server side.
+   * Improved documentation of mbedtls_ssl_config_defaults().
+     Fixes #516 reported by github-monoculture.
 
 = mbed TLS 2.1.15 branch released 2018-08-31
 
